// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SearchRecentSection > SearchRecentSection - Snapshots > matches snapshot with only tags 1`] = `
<div
  class="flex flex-col gap-3"
>
  <div
    class="flex items-center gap-2"
  >
    <span
      class="tracking-widest text-muted-foreground uppercase"
      data-size="xs"
    >
      Recent searches
    </span>
  </div>
  <div
    class="flex flex-wrap gap-2"
  >
    <div
      data-testid="tag-item-tech"
    >
      Tag: tech
    </div>
    <div
      data-testid="tag-item-news"
    >
      Tag: news
    </div>
  </div>
</div>
`;

exports[`SearchRecentSection > SearchRecentSection - Snapshots > matches snapshot with only users 1`] = `
<div
  class="flex flex-col gap-3"
>
  <div
    class="flex items-center gap-2"
  >
    <span
      class="tracking-widest text-muted-foreground uppercase"
      data-size="xs"
    >
      Recent searches
    </span>
  </div>
  <div
    class="flex flex-wrap gap-x-6 gap-y-3"
  >
    <div
      data-testid="user-item-pk:user1"
    >
      User: pk:user1
    </div>
    <div
      data-testid="user-item-pk:user2"
    >
      User: pk:user2
    </div>
  </div>
</div>
`;

exports[`SearchRecentSection > SearchRecentSection - Snapshots > matches snapshot with users and tags 1`] = `
<div
  class="flex flex-col gap-3"
>
  <div
    class="flex items-center gap-2"
  >
    <span
      class="tracking-widest text-muted-foreground uppercase"
      data-size="xs"
    >
      Recent searches
    </span>
    <button
      aria-label="Clear all recent searches"
      class="flex cursor-pointer items-center rounded text-muted-foreground transition-colors outline-none hover:text-foreground focus-visible:ring-[3px] focus-visible:ring-ring/50"
      data-testid="clear-all-button"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-x size-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
  </div>
  <div
    class="flex flex-wrap gap-x-6 gap-y-3"
  >
    <div
      data-testid="user-item-pk:user1"
    >
      User: pk:user1
    </div>
    <div
      data-testid="user-item-pk:user2"
    >
      User: pk:user2
    </div>
  </div>
  <div
    class="flex flex-wrap gap-2"
  >
    <div
      data-testid="tag-item-tech"
    >
      Tag: tech
    </div>
    <div
      data-testid="tag-item-news"
    >
      Tag: news
    </div>
  </div>
</div>
`;
